:construction_worker: Dev environment
- add the docker-compose.yml\n - add script to access container environments

--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index",
+    "dev": "yarn generate:nexus && ts-node-dev --no-notify --respawn --transpile-only src/index",
     "generate:nexus": "ts-node --transpile-only src/schema"
   },
   "devDependencies": {
