--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:16-alpine
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY package.json ./
+COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 COPY commands.sh /scripts/commands.sh
+COPY ./prisma .env ./
 RUN ["chmod", "+x", "/scripts/commands.sh"]
 
 # RUN chown node:node /app
