--- a/back/package.json
+++ b/back/package.json
@@ -7,17 +7,22 @@
   "author": "Mehran Shahidi",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "yarn generate:nexus && ts-node-dev --no-notify --respawn --transpile-only src/index",
-    "generate:nexus": "ts-node --transpile-only src/schema"
+    "start": "node dist/index",
+    "clean": "rm -rf dist",
+    "build": "yarn clean && yarn generate && yarn tsc",
+    "generate": "yarn generate:prisma && yarn generate:nexus",
+    "generate:prisma": "prisma generate",
+    "generate:nexus": "ts-node --transpile-only src/schema",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@fsouza/prettierd": "^0.18.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.5.7",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "7.32",
     "eslint_d": "^11.1.1",
     "prisma": "^3.8.0",
     "ts-node": "^10.4.0",
