--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
@@ -51,6 +53,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.6.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint_d": "^11.1.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
