--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@hookform/resolvers": "^2.8.8",
+    "@tailwindui/react": "^0.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
