--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
