--- a/front/package.json
+++ b/front/package.json
@@ -61,6 +61,7 @@
     "eslint_d": "^11.1.1",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.12",
     "tailwindcss-rtl": "^0.8.0"
   }
