--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.2.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
