--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-github-corner": "^2.5.0",
     "react-hook-form": "^7.22.5",
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
